Fix background styles
This commit fixes the background image, so that it covers the entire
width of the container, without repeating. This commit also adds some
styles to the text displayed on thee login page.

--- a/assets/scss/components/_login-form.scss
+++ b/assets/scss/components/_login-form.scss
@@ -29,6 +29,7 @@
 .login-form-background {
   display: none;
   width: calc(100% - 450px);
+  background-size: cover;
   &:before {
     background-color: $color-white;
     content: "";
