--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -55,12 +55,17 @@ h1, h2, h3, h4, h5 {
   color: inherit;
   font-family: inherit;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.6;
   margin-bottom: 0.5rem;
 }
 
 h2 {
   font-size: $h2-font-size;
+  line-height: 1.6;
+}
+
+p {
+  font-size: $base-font-size;
 }
 
 /** This is specific to overwrite styles **/
